Remove Java 11 APIs